fix: alignment of help table head

--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -88,6 +88,10 @@
     td {
       word-break: break-all;
     }
+
+    th {
+      width: 80%;
+    }
   }
 
   &-btn {
